# ai-services

./: .gitignore  README.md  enterprise_ai_customer_service_prd.md  start-dev.cmd
agent-service/: .env.example  .gitignore  README.md  init_db.py  pyproject.toml
agent-service/app/: main.py
agent-service/app/api/: admin.py  agent.py  chat.py  chat_types.py
agent-service/app/config/: settings.py
agent-service/app/graph/: chat_graph.py
agent-service/app/models/: database.py
agent-service/app/services/: ai_client.py  embedding_service.py  intent_service.py  knowledge_service.py  order_seed.py  order_service.py  qdrant_vector_service.py  ticket_service.py
agent-service/scripts/: add_intent_columns.py  seed_orders.py  test_classify.py
agent-service/tests/e2e/: test_agent_service_api.py
api-gateway/: .env.example  package-lock.json  package.json
api-gateway/src/: index.ts
data/knowledge/: account_and_security.md  after_sales_and_warranty.md  ecommerce_customer_service_seed_knowledge_2026-05-11.md  logistics_and_delivery.md  membership_and_promotion.md  payment_and_refund.md
docker/: Dockerfile.agent  Dockerfile.frontend  Dockerfile.gateway  docker-compose.yml
docs/plan/: 2026-05-11-future-knowledge-governance.md  2026-05-11-knowledge-storage-model.md  2026-05-11-langchain-qdrant-knowledge-rag-plan.md  2026-05-11-rag-observability-and-quality-plan.md
docs/plans/: 2026-05-09-agent-mvp-backend.md  2026-05-09-agent-mvp-backend.zh-CN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: start-dev.ps1
(+20 files in other folders)
