[project]
name = "ai-customer-service-agent"
version = "0.1.0"
description = "AI Agent Service for Customer Service System"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.0",
    "loguru>=0.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
